--- a/src/project_manager/ros_colcon_step.ui
+++ b/src/project_manager/ros_colcon_step.ui
@@ -7,12 +7,12 @@
     <x>0</x>
     <y>0</y>
     <width>545</width>
-    <height>105</height>
+    <height>79</height>
    </rect>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <property name="fieldGrowthPolicy">
-    <enum>QFormLayout::ExpandingFieldsGrow</enum>
+    <enum>QFormLayout::FieldGrowthPolicy::ExpandingFieldsGrow</enum>
    </property>
    <property name="leftMargin">
     <number>9</number>
@@ -52,22 +52,6 @@
    </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="cmakeArgumentsLineEdit"/>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="makeArgumentsLabel">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Make Arguments:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QLineEdit" name="makeArgumentsLineEdit"/>
    </item>
   </layout>
  </widget>
